--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -30,6 +30,8 @@ $tickFontSize: 12px;
 
 $tickFontSizeMedium: 14px;
 
+$tickFontSizeLarge: 10px;
+
 $lineWidthNarrow: 4px;
 $tickWidthNarrow: 2px;
 $tickFontSizeNarrow: 22px;
